# terraform_0

./: .gitignore  .terraform.lock.hcl  README.md  docker-compose.yml  main.tf  outputs.tf  pyproject.toml  variables.tf  versions.tf
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: terraform.yml
docs/: README.md  architecture.md  complete-architecture.md  data-flow.md  event-flow.md
env-localstack/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  sample-lambda-event.json  test_lambda.py  variables.tf  versions.tf
module-photo-processor/: dynamodb.tf  iam.tf  lambda.tf  messaging.tf  outputs.tf  s3.tf  variables.tf
module-photo-processor/lambda/: photo_processor.py
scripts/: install-hooks.ps1
tests/: test_photo_processor.py
