[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terraform-photo-processor"
version = "0.1.0"
description = "Photo processor Lambda for Terraform LocalStack project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.34.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "moto>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "moto>=4.0.0",
]